[gd_scene load_steps=22 format=3 uid="uid://cnfda0pucuc7a"]

[ext_resource type="Script" uid="uid://cpsvjuyfea67j" path="res://scenes/forest.gd" id="1_i1yi8"]
[ext_resource type="Texture2D" uid="uid://hu3mytl5smxk" path="res://art/Environment/spr_grass_tileset.png" id="1_xr56k"]
[ext_resource type="Texture2D" uid="uid://gjjsw024dioc" path="res://art/Environment/survivalgame-terrian-cliffs.png" id="2_sek5r"]
[ext_resource type="Texture2D" uid="uid://c7gwnxxpqbgns" path="res://art/Environment/survivalgame-terrian-defult.png" id="3_i1yi8"]
[ext_resource type="Texture2D" uid="uid://b723n306g80g2" path="res://art/Environment/survivalgame-trees.png" id="4_qm7rg"]
[ext_resource type="Texture2D" uid="uid://c5fewvhgwjuxg" path="res://art/Environment/survivalgame-terrian-water.png" id="5_0nboi"]
[ext_resource type="PackedScene" uid="uid://bi38uu3gb6cds" path="res://scenes/slime.tscn" id="6_sek5r"]
[ext_resource type="Texture2D" uid="uid://c6u2bq14lnu21" path="res://art/Environment/SmokePartical.png" id="8_qm7rg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3knxq"]
texture = ExtResource("1_xr56k")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:5/0 = 0
12:6/0 = 0
12:7/0 = 0
12:8/0 = 0
12:9/0 = 0
13:5/0 = 0
13:6/0 = 0
13:7/0 = 0
13:8/0 = 0
13:9/0 = 0
14:5/0 = 0
14:6/0 = 0
14:7/0 = 0
14:8/0 = 0
14:9/0 = 0
15:5/0 = 0
15:6/0 = 0
15:7/0 = 0
15:8/0 = 0
15:9/0 = 0
16:5/0 = 0
16:6/0 = 0
16:7/0 = 0
16:8/0 = 0
16:9/0 = 0
17:5/0 = 0
17:6/0 = 0
17:7/0 = 0
17:8/0 = 0
17:9/0 = 0
18:5/0 = 0
18:6/0 = 0
18:7/0 = 0
18:8/0 = 0
18:9/0 = 0
12:1/0 = 0
12:2/0 = 0
12:3/0 = 0
12:4/0 = 0
13:1/0 = 0
13:2/0 = 0
13:3/0 = 0
13:4/0 = 0
14:1/0 = 0
14:2/0 = 0
14:3/0 = 0
14:4/0 = 0
15:1/0 = 0
15:2/0 = 0
15:3/0 = 0
15:4/0 = 0
19:5/0 = 0
19:6/0 = 0
19:7/0 = 0
19:8/0 = 0
19:9/0 = 0
19:10/0 = 0
19:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:16/0 = 0
21:16/0 = 0
21:15/0 = 0
20:15/0 = 0
20:14/0 = 0
19:13/0 = 0
19:12/0 = 0
18:12/0 = 0
17:12/0 = 0
16:12/0 = 0
15:12/0 = 0
14:12/0 = 0
13:12/0 = 0
12:12/0 = 0
11:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
6:12/0 = 0
4:13/0 = 0
3:13/0 = 0
2:13/0 = 0
1:13/0 = 0
0:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
11:13/0 = 0
5:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
20:12/0 = 0
20:13/0 = 0
19:14/0 = 0
18:14/0 = 0
17:14/0 = 0
16:14/0 = 0
15:15/0 = 0
14:15/0 = 0
13:15/0 = 0
12:15/0 = 0
11:15/0 = 0
10:15/0 = 0
9:15/0 = 0
8:15/0 = 0
7:15/0 = 0
6:15/0 = 0
5:15/0 = 0
4:15/0 = 0
3:15/0 = 0
2:15/0 = 0
1:15/0 = 0
0:15/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
15:19/0 = 0
14:19/0 = 0
13:19/0 = 0
12:19/0 = 0
11:19/0 = 0
10:19/0 = 0
9:19/0 = 0
8:19/0 = 0
4:20/0 = 0
3:20/0 = 0
2:20/0 = 0
2:21/0 = 0
1:21/0 = 0
1:20/0 = 0
1:22/0 = 0
1:23/0 = 0
1:24/0 = 0
1:25/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
9:26/0 = 0
8:26/0 = 0
7:26/0 = 0
6:26/0 = 0
5:26/0 = 0
4:26/0 = 0
4:24/0 = 0
3:25/0 = 0
2:25/0 = 0
2:24/0 = 0
3:23/0 = 0
2:23/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
7:21/0 = 0
6:21/0 = 0
5:21/0 = 0
4:21/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:22/0 = 0
11:22/0 = 0
9:22/0 = 0
5:23/0 = 0
4:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:22/0 = 0
13:22/0 = 0
14:21/0 = 0
13:21/0 = 0
12:21/0 = 0
12:22/0 = 0
14:23/0 = 0
14:24/0 = 0
14:25/0 = 0
13:24/0 = 0
12:24/0 = 0
11:24/0 = 0
10:24/0 = 0
9:24/0 = 0
8:24/0 = 0
7:24/0 = 0
6:24/0 = 0
5:24/0 = 0
13:25/0 = 0
13:26/0 = 0
12:26/0 = 0
11:26/0 = 0
10:26/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
15:27/0 = 0
15:26/0 = 0
14:26/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
19:18/0 = 0
19:19/0 = 0
17:18/0 = 0
18:18/0 = 0
17:20/0 = 0
17:21/0 = 0
17:22/0 = 0
16:20/0 = 0
15:21/0 = 0
16:21/0 = 0
18:21/0 = 0
19:21/0 = 0
19:20/0 = 0
18:20/0 = 0
18:22/0 = 0
19:22/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ercsu"]
texture = ExtResource("2_sek5r")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
38:0/0 = 0
39:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
42:1/0 = 0
43:1/0 = 0
44:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
45:2/0 = 0
46:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
45:3/0 = 0
46:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
45:4/0 = 0
46:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
38:5/0 = 0
39:5/0 = 0
42:5/0 = 0
43:5/0 = 0
44:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
42:6/0 = 0
43:6/0 = 0
44:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j3csf"]
texture = ExtResource("3_i1yi8")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
8:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
20:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
20:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dabdc"]
texture = ExtResource("4_qm7rg")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
0:0/0/y_sort_origin = 12
1:0/0 = 0
1:0/0/y_sort_origin = 12
2:0/0 = 0
2:0/0/y_sort_origin = 17
3:0/0 = 0
3:0/0/y_sort_origin = 12
4:0/0 = 0
4:0/0/y_sort_origin = 12
5:0/0 = 0
5:0/0/y_sort_origin = 12
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
8:0/0/y_sort_origin = 12
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.52887, 8.48753, 3.48207, 7.61702, 9.14042, 7.83465, 7.61702, 12.1872, 3.91732, 15.0164, -0.652887, 14.5811, -5.00547, 13.9283, -6.31124, 11.5343)
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
0:1/0/y_sort_origin = 12
1:1/0 = 0
1:1/0/y_sort_origin = 12
2:1/0 = 0
2:1/0/y_sort_origin = 12
3:1/0 = 0
3:1/0/y_sort_origin = 12
4:1/0 = 0
4:1/0/y_sort_origin = 12
5:1/0 = 0
5:1/0/y_sort_origin = 12
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
8:1/0/y_sort_origin = 12
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.9696, 5.87599, 3.04681, 5.00547, 3.26444, 9.35805, 1.95866, 10.4462, -0.217628, 13.493, -5.00547, 13.9283, -10.0109, 11.752)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
0:2/0/y_sort_origin = -10
1:2/0 = 0
1:2/0/y_sort_origin = 10
2:2/0 = 0
2:2/0/y_sort_origin = -10
3:2/0 = 0
3:2/0/y_sort_origin = 10
4:2/0 = 0
4:2/0/y_sort_origin = 10
5:2/0 = 0
5:2/0/y_sort_origin = 10
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
8:2/0/y_sort_origin = 12
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.04681, 8.48753, 14.1459, 7.83465, 13.2754, 12.8401, 10.8815, 14.5811, 0.870516, 15.234, -2.17629, 13.0577)
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cf55d"]
texture = ExtResource("5_0nboi")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0

[sub_resource type="TileSet" id="TileSet_di0nb"]
tile_size = Vector2i(40, 40)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_3knxq")
sources/1 = SubResource("TileSetAtlasSource_ercsu")
sources/3 = SubResource("TileSetAtlasSource_j3csf")
sources/4 = SubResource("TileSetAtlasSource_dabdc")
sources/5 = SubResource("TileSetAtlasSource_cf55d")

[sub_resource type="Animation" id="Animation_sek5r"]
resource_name = "Fade"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForestCutscene/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_i1yi8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForestCutscene/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.784314)]
}

[sub_resource type="Animation" id="Animation_qm7rg"]
resource_name = "Zoom"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForestCutscene/Path2D/PathFollow2D/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5.5, 5.5), Vector2(5, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qm7rg"]
_data = {
&"Fade": SubResource("Animation_sek5r"),
&"RESET": SubResource("Animation_i1yi8"),
&"Zoom": SubResource("Animation_qm7rg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0nboi"]
size = Vector2(57, 19)

[sub_resource type="Curve2D" id="Curve2D_i1yi8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -20, 299, 0, 0, 0, 0, -19.6826, 353.159, 0, 0, 0, 0, -44.476, 380.206, 0, 0, 0, 0, -219.532, 380.957, 0, 0, 0, 0, -221.465, 660.876, 0, 0, 0, 0, 226.592, 660.876, 0, 0, 0, 0, 227.818, 455.033, 0, 0, 0, 0, -18, 527)
}
point_count = 8

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0nboi"]
particle_flag_disable_z = true
direction = Vector3(0, -180, 0)
spread = 71.0
initial_velocity_min = 1.0
initial_velocity_max = 2.0
angular_velocity_min = 91.03
angular_velocity_max = 198.62
orbit_velocity_min = -2.0
orbit_velocity_max = 2.0
radial_velocity_min = 9.99998
radial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -27.59
linear_accel_max = 13.79
radial_accel_min = -2.23517e-06
radial_accel_max = 27.58

[node name="Forest" type="Node2D"]
script = ExtResource("1_i1yi8")

[node name="ForestMain" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="ForestMain"]
y_sort_enabled = true
tile_set = SubResource("TileSet_di0nb")
format = 2
layer_0/name = "Layer1"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(458751, 196611, 1, 524287, 196611, 1, 589823, 196611, 1, 655359, 786435, 1, 720895, 786435, 2, 786431, 3, 0, 851967, 720899, 0, 917503, 720899, 1, 983039, 720899, 1, 1048575, 196611, 1, 1114111, 327683, 2, 1179647, 3, 0, 1179646, 3, 0, 1179645, 3, 0, 1179644, 3, 0, 1179643, 3, 0, 1179642, 3, 0, 1179641, 3, 0, 1179640, 3, 0, 1179639, 3, 0, 1114112, 3, 0, 1114113, 3, 0, 1114114, 3, 0, 1114115, 3, 0, 1114116, 3, 0, 1114117, 3, 0, 1114118, 3, 0, 1114119, 3, 0, 1114120, 3, 0, 720894, 720899, 2, 589815, 3, 0, 589816, 3, 0, 589817, 3, 0, 589818, 3, 0, 589819, 3, 0, 589820, 3, 0, 589821, 3, 0, 589822, 3, 0, 524286, 3, 0, 458750, 3, 0, 458749, 3, 0, 458748, 3, 0, 458747, 3, 0, 458746, 3, 0, 458745, 3, 0, 458744, 3, 0, 458743, 3, 0, 524279, 3, 0, 524280, 3, 0, 524281, 3, 0, 524282, 3, 0, 524283, 3, 0, 524284, 3, 0, 524285, 3, 0, 393216, 3, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 458760, 3, 0, 458759, 3, 0, 458758, 3, 0, 458757, 3, 0, 458756, 3, 0, 458755, 3, 0, 458754, 3, 0, 458753, 3, 0, 458752, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 655351, 3, 0, 655352, 3, 0, 655353, 655363, 0, 655354, 720899, 0, 655355, 720899, 0, 655356, 720899, 0, 655357, 720899, 0, 655358, 720899, 0, 589825, 3, 0, 589826, 3, 0, 589827, 655363, 0, 589828, 720899, 0, 589829, 720899, 0, 589830, 720899, 0, 589831, 786435, 0, 589832, 3, 0, 655368, 3, 0, 655367, 786435, 1, 655366, 720899, 1, 655365, 720899, 1, 655364, 720899, 1, 655363, 655363, 1, 655362, 3, 0, 655361, 3, 0, 720893, 720899, 2, 720892, 720899, 2, 720891, 720899, 1, 720890, 720899, 1, 720889, 655363, 1, 720888, 3, 0, 720887, 3, 0, 786423, 3, 0, 851960, 3, 0, 851961, 655363, 1, 851962, 720899, 1, 851963, 786435, 1, 851964, 3, 0, 851965, 3, 0, 851966, 655363, 0, 786432, 786435, 0, 786433, 3, 0, 786434, 3, 0, 786435, 655363, 1, 786436, 720899, 1, 786437, 720899, 1, 786438, 720899, 1, 720902, 720899, 1, 720903, 786435, 1, 720904, 3, 0, 786439, 786435, 1, 786440, 3, 0, 720900, 720899, 1, 720899, 655363, 1, 720898, 3, 0, 720897, 3, 0, 720901, 720899, 1, 720896, 3, 0, 786430, 3, 0, 786429, 3, 0, 786428, 3, 0, 786427, 786435, 1, 786426, 720899, 1, 786425, 655363, 1, 786424, 3, 0, 851959, 3, 0, 917495, 3, 0, 983031, 3, 0, 1048567, 3, 0, 1114103, 3, 0, 1048584, 3, 0, 1048583, 3, 0, 983047, 3, 0, 983048, 3, 0, 917512, 3, 0, 851976, 3, 0, 851975, 786435, 2, 851974, 720899, 2, 917509, 196611, 1, 917508, 3, 0, 917507, 3, 0, 917506, 3, 0, 917505, 3, 0, 917504, 786435, 2, 983038, 655363, 2, 917502, 655363, 1, 851968, 786435, 1, 851969, 3, 0, 851971, 655363, 2, 851972, 720899, 2, 851973, 720899, 1, 917510, 3, 0, 917511, 3, 0, 983045, 196611, 1, 1048581, 393219, 2, 1048582, 3, 0, 983046, 3, 0, 983044, 3, 0, 1048580, 327683, 3, 1048579, 327683, 3, 1048578, 327683, 3, 1048577, 327683, 3, 983041, 3, 0, 983040, 3, 0, 983042, 3, 0, 983043, 3, 0, 1114110, 327683, 3, 1114109, 327683, 3, 1048576, 327683, 3, 1114108, 327683, 3, 1048571, 786435, 1, 1048570, 720899, 1, 1048569, 655363, 1, 1048568, 3, 0, 1114104, 3, 0, 1114105, 655363, 2, 1114106, 720899, 2, 1114107, 720899, 2, 1048574, 3, 0, 1048573, 3, 0, 1048572, 3, 0, 983036, 3, 0, 983037, 3, 0, 983035, 786435, 1, 983034, 720899, 1, 983033, 655363, 1, 983032, 3, 0, 917496, 3, 0, 917497, 655363, 1, 917498, 720899, 1, 917499, 786435, 1, 917500, 3, 0, 917501, 3, 0, 589824, 3, 0, 655360, 3, 0, 851970, 3, 0)
layer_1/name = "Layer2"
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(1114118, 65540, 0, 1179640, 65540, 0, 1179641, 65540, 0, 983037, 262148, 0, 720895, 4, 0, 655360, 327684, 0, 786430, 262148, 2, 786429, 196612, 2, 589816, 262148, 2, 917506, 65540, 0, 917505, 65540, 0, 524290, 196612, 2, 917512, 327684, 0, 983048, 327684, 1, 1048584, 327684, 1, 1114120, 327684, 1, 524296, 327684, 2, 720897, 327684, 2)
layer_2/name = "Layer3"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(589820, 262148, 2, 589821, 262148, 2, 589822, 327684, 2, 589817, 262148, 2, 589818, 262148, 2, 589819, 262148, 2, 589815, 262148, 1, 589816, 327684, 1, 524288, 196612, 1, 524289, 262148, 1, 524290, 327684, 1, 524291, 262148, 2, 524292, 262148, 2, 524293, 262148, 2, 524294, 262148, 2, 524295, 262148, 2, 524296, 196612, 1, 458743, 65540, 1, 524279, 262148, 1, 458744, 65540, 1, 524280, 65540, 1, 458745, 65540, 1, 524281, 262148, 1, 458746, 65540, 1, 524282, 262148, 1, 458747, 65540, 1, 524283, 262148, 1, 458748, 65540, 1, 524284, 262148, 1, 458749, 65540, 1, 524285, 262148, 1, 458750, 131076, 1, 524286, 327684, 1, 393216, 4, 1, 458752, 196612, 1, 393217, 65540, 1, 458753, 262148, 1, 393218, 65540, 1, 458754, 262148, 1, 393219, 65540, 1, 458755, 262148, 1, 393220, 65540, 1, 458756, 262148, 1, 393221, 65540, 1, 458757, 262148, 1, 393222, 65540, 1, 458758, 262148, 1, 393223, 65540, 1, 458759, 262148, 1, 393224, 65540, 1, 458760, 65540, 1, 655351, 262148, 1, 720887, 262148, 1, 655352, 327684, 1, 720888, 327684, 1, 786423, 262148, 1, 786424, 327684, 1, 851959, 262148, 1, 917495, 262148, 1, 851960, 327684, 1, 917496, 327684, 1, 983031, 262148, 1, 983032, 327684, 1, 1048567, 262148, 1, 1114103, 262148, 1, 1048568, 327684, 1, 1114104, 327684, 1, 1179639, 262148, 1, 1179640, 131076, 1, 1179641, 196612, 0, 1179642, 262148, 0, 1179643, 262148, 0, 1179644, 262148, 0, 1179645, 262148, 0, 1179646, 262148, 0, 1179647, 262148, 0, 1114112, 262148, 0, 1114113, 262148, 0, 1114114, 262148, 0, 1114115, 262148, 0, 1114116, 262148, 0, 1114117, 262148, 0, 1114118, 196612, 1, 1114119, 262148, 1, 1114120, 196612, 1, 1048582, 196612, 1, 1048583, 262148, 1, 1048584, 196612, 1, 917510, 196612, 0, 983046, 196612, 1, 917511, 262148, 0, 983047, 262148, 1, 917512, 196612, 1, 983048, 196612, 1, 917500, 196612, 1, 983036, 196612, 1, 1048572, 196612, 2, 786428, 196612, 1, 851964, 196612, 1, 917501, 327684, 1, 983037, 327684, 1, 1048573, 262148, 2, 851965, 327684, 1, 786429, 327684, 1, 589824, 196612, 1, 655360, 196612, 1, 720896, 262148, 2, 589825, 262148, 1, 655361, 262148, 1, 720897, 196612, 1, 786430, 196612, 2, 786431, 262148, 2, 917506, 131076, 1, 917507, 262148, 0, 917508, 327684, 0, 983042, 262148, 2, 983043, 262148, 2, 983044, 327684, 2, 983041, 262148, 2, 917505, 196612, 1, 1048574, 327684, 2, 983038, 327684, 0, 720894, 262148, 0, 720895, 262148, 0, 720892, 196612, 0, 720893, 262148, 0, 983040, 196612, 2, 917504, 196612, 0, 786433, 196612, 1, 851969, 196612, 1, 589826, 327684, 1, 655362, 327684, 1, 720898, 327684, 1, 786434, 327684, 1, 851970, 327684, 1, 589832, 196612, 1, 655368, 196612, 1, 720904, 196612, 1, 786440, 196612, 1, 851976, 196612, 1)

[node name="Slime" parent="ForestMain/TileMap" instance=ExtResource("6_sek5r")]
visible = false
position = Vector2(-251, 417)

[node name="Slime2" parent="ForestMain/TileMap" instance=ExtResource("6_sek5r")]
visible = false
position = Vector2(-244, 659)

[node name="Slime3" parent="ForestMain/TileMap" instance=ExtResource("6_sek5r")]
visible = false
position = Vector2(-192, 548)

[node name="Slime4" parent="ForestMain/TileMap" instance=ExtResource("6_sek5r")]
visible = false
position = Vector2(196, 532)

[node name="Slime5" parent="ForestMain/TileMap" instance=ExtResource("6_sek5r")]
visible = false
position = Vector2(286, 455)

[node name="Slime6" parent="ForestMain/TileMap" instance=ExtResource("6_sek5r")]
visible = false
position = Vector2(155, 412)

[node name="Slime7" parent="ForestMain/TileMap" instance=ExtResource("6_sek5r")]
visible = false
position = Vector2(146, 669)

[node name="Slime8" parent="ForestMain/TileMap" instance=ExtResource("6_sek5r")]
visible = false
position = Vector2(-48, 665)

[node name="ForestCutscene" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="ForestCutscene"]
z_index = 1
offset_left = -360.0
offset_top = 240.0
offset_right = 360.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.784314)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ForestCutscene"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_qm7rg")
}

[node name="Player_detection" type="Area2D" parent="ForestCutscene"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForestCutscene/Player_detection"]
position = Vector2(-19, 231)
shape = SubResource("RectangleShape2D_0nboi")

[node name="Path2D" type="Path2D" parent="ForestCutscene"]
curve = SubResource("Curve2D_i1yi8")

[node name="PathFollow2D" type="PathFollow2D" parent="ForestCutscene/Path2D"]
position = Vector2(-20, 299)
rotation = 1.56493
loop = false

[node name="Camera2D" type="Camera2D" parent="ForestCutscene/Path2D/PathFollow2D"]
position = Vector2(0.00585938, -0.999985)
zoom = Vector2(5.5, 5.5)

[node name="SmokeParticle1" type="GPUParticles2D" parent="ForestCutscene"]
position = Vector2(-250, 417)
emitting = false
amount = 800
texture = ExtResource("8_qm7rg")
process_material = SubResource("ParticleProcessMaterial_0nboi")

[node name="SmokeParticle3" type="GPUParticles2D" parent="ForestCutscene"]
position = Vector2(-244, 658)
emitting = false
amount = 800
texture = ExtResource("8_qm7rg")
process_material = SubResource("ParticleProcessMaterial_0nboi")

[node name="SmokeParticle2" type="GPUParticles2D" parent="ForestCutscene"]
position = Vector2(-191, 547)
emitting = false
amount = 800
texture = ExtResource("8_qm7rg")
process_material = SubResource("ParticleProcessMaterial_0nboi")

[node name="SmokeParticle4" type="GPUParticles2D" parent="ForestCutscene"]
position = Vector2(-48, 665)
emitting = false
amount = 800
texture = ExtResource("8_qm7rg")
process_material = SubResource("ParticleProcessMaterial_0nboi")

[node name="SmokeParticle5" type="GPUParticles2D" parent="ForestCutscene"]
position = Vector2(146, 669)
emitting = false
amount = 800
texture = ExtResource("8_qm7rg")
process_material = SubResource("ParticleProcessMaterial_0nboi")

[node name="SmokeParticle6" type="GPUParticles2D" parent="ForestCutscene"]
position = Vector2(155, 412)
emitting = false
amount = 800
texture = ExtResource("8_qm7rg")
process_material = SubResource("ParticleProcessMaterial_0nboi")

[node name="SmokeParticle7" type="GPUParticles2D" parent="ForestCutscene"]
position = Vector2(286, 455)
emitting = false
amount = 800
texture = ExtResource("8_qm7rg")
process_material = SubResource("ParticleProcessMaterial_0nboi")

[node name="SmokeParticle8" type="GPUParticles2D" parent="ForestCutscene"]
position = Vector2(196, 532)
emitting = false
amount = 800
texture = ExtResource("8_qm7rg")
process_material = SubResource("ParticleProcessMaterial_0nboi")

[connection signal="body_entered" from="ForestCutscene/Player_detection" to="." method="_on_player_detection_body_entered"]
